--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,13 @@ title: blank # the website title (if blank, full name will be used instead)
 first_name: Kevin
 middle_name:
 last_name: Angers
-email: kevin.angers@mail.utoronto.ca
+email: ka3658@nyu.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   Kevin Angers' personal website.
 footer_text: > # the ">" symbol means to ignore newlines until "footer_text:"
 keywords: kevin-angers, academic-website, portfolio-website # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: ⚛️ # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: 🦾 # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://kevinangers.github.io # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/. Leave blank for root
@@ -93,7 +93,7 @@ pinterest_id: # your pinterest id
 publons_id: # your ID on Publons
 quora_username: # your Quora username
 research_gate_profile: # your profile on ResearchGate
-scholar_userid: # your Google Scholar ID
+scholar_userid: j0u6ntAAAAAJ
 scopus_id: # your profile on Scopus
 semanticscholar_id: # your Semantic Scholar ID
 spotify_id: # your spotify id
@@ -105,7 +105,7 @@ whatsapp_number: # your WhatsApp number (full phone number in international form
 wikidata_id: # your wikidata id
 wikipedia_id: # your wikipedia id (Case sensitive)
 work_url: # work page URL
-x_username: kevinangers_ # your X handle
+# x_username: kevinangers_ # your X handle
 youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 zotero_username: # your zotero username
 
@@ -199,6 +199,9 @@ collections:
     output: true
     permalink: /:collection/:title/
   publications:
+    output: true
+    permalink: /:collection/:title/
+  experience:
     output: true
     permalink: /:collection/:title/
 
@@ -438,7 +441,7 @@ enable_masonry: true # enables automatic project cards arrangement
 enable_math: true # enables math typesetting (uses MathJax)
 enable_tooltips: false # enables automatic tooltip links generated for each section titles on pages and posts
 enable_darkmode: true # enables switching between light/dark modes
-enable_navbar_social: true # enables displaying social links in the navbar on the about page
+enable_navbar_social: false # keep links within the page body instead of the navbar
 enable_project_categories: true # enables categorization of projects into multiple categories
 enable_medium_zoom: false # enables image zoom feature (as on medium.com)
 enable_progressbar: false # enables a horizontal progress bar linked to the vertical scroll position
